align fix

--- a/Client/auction_system/src/components/Header/header.css
+++ b/Client/auction_system/src/components/Header/header.css
@@ -2,7 +2,8 @@
 {
     
     color: rgb(0, 0, 0);
-    display: flex;
+    display:flex;
+    margin: 10px;
     
     
 }
@@ -48,7 +49,7 @@
     color: red;
 }
 .headerText{
-    margin-top: 10px;
+    
     align-items: end;
     padding-left: 30px;
 }
